# ClipboardViewer

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  clip.mpz  configure  configure.ac  makepkg  makezip  remakesourcelist  subbone
ClipboardViewer/: flagsandlibs  sources
ClipboardViewer/app/: Makefile.am  Makefile.in
ClipboardViewer/debug/: Makefile.am
ClipboardViewer/resources/glade/: ClipboardViewer.glade  ClipboardViewer.gladep
ClipboardViewer/resources/man/: clipboardviewer.1  clipboardviewer.mpz
ClipboardViewer/resources/pixmaps/: ClipboardViewer.desktop  clipviewer.desktop
ClipboardViewer/resources/scripts/: MakeClipping  README  form
ClipboardViewer/src/: globals.cpp  globals.h  internet.h  main.cpp
autom4te.cache/: output.0  requests  traces.0  traces.1
