
SUBDIRS = ClipboardViewer/app ClipboardViewer/debug#***MMM***

gladefilesdir = $(pkgdatadir)
gladefiles_DATA = ClipboardViewer/resources/glade/ClipboardViewer.glade

pixfilesdir = $(pkgdatadir)/pixmaps
pixfiles_DATA = ClipboardViewer/resources/pixmaps/*

scriptfilesdir = $(pkgdatadir)/scripts
scriptfiles_SCRIPTS = ClipboardViewer/resources/scripts/*

remake:
	$(shell ./remakesourcelist)

